--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,18 +1,18 @@
 ext.versions = [
     minSdk           : 16,
     compileSdk       : 30,
-    versionCode      : 7,
-    versionName      : '1.0.6',
+    versionCode      : 8,
+    versionName      : '1.0.8',
 
-    gradleBuildTool  : '4.1.3',
+    gradleBuildTool  : '4.2.2',
     spotlessGradle   : '5.12.4',
     ktlintGradle     : '0.41.0',
     dokkaGradle      : '1.4.30',
     mavenPublish     : '0.15.1',
 
-    kotlin           : '1.4.32',
-    androidxAppcompat: '1.2.0',
+    kotlin           : '1.5.21',
+    androidxAppcompat: '1.3.1',
 
     // for demo
-    googleMaterial   : '1.3.0-alpha02'
+    googleMaterial   : '1.4.0'
 ]
